# studip-jsonapi

./: LICENSE  README.md  justfile  pyproject.toml
scripts/: release.sh
src/studip_jsonapi/: client.py  models.py
studip_jsonapi/: client.py  models.py
