[project]
name = "studip_jsonapi"
dynamic = ["version"]
authors = [
  { name="Tim Hollmann", email="mail@tim-hollmann.de" },
]
description = "Stud.IP JSON:API Client for Python"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/timholl/studip-jsonapi"
Issues = "https://github.com/timholl/studip-jsonapi/issues"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
